- Fixed file rename on panel refres issue - minor refactor